fix: fixed sometimes title is misaligned

--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -1310,7 +1310,7 @@ and (max-width: 1024px) {
   }
 
   .navbar-inverse .navbar-brand {
-    font-size: 24px;
+    font-size: 23px;
   }
 
   .content {
